--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 				rel="stylesheet"
 	      		type="text/css"/>
 		<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-
-		<script type="text/javascript" src="http://momentjs.com/downloads/moment-with-langs.min.js"></script>
 		<script type="text/javascript" src="files/FeedEk.js"></script>
 		<script type="text/javascript" src="files/rssFeed.js"></script>
 	</head>
@@ -42,16 +40,16 @@
 				<td>
 					<div id="cntPane">
 						<div id="aboutme">
-							<h2>Frank R. Castillo</h2>
+							<h2>Frank R. Castillo [<a href="https://www.linkedin.com/in/franklinrcastillo/">LinkedIn</a>]</h2>
 							<img src="files/picture.jpg" id="profile"/>
 							<p>
 								<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>I am a student, family man, US Marine, and programming enthusiast who follows and, when time allows, writes about politics, international relations, technology, economics, finance, and other topics of global relevance. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I hold an MBA from University of South Florida Saint Petersburg, as well as a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology. I also served in the United States Marine Corps for nine years, concluding my service in 2013.
 							</p>
 						</div>
 						<div id="blog">
-							<h3>Blog</h3>
+							<h3>Blog [<a href="https://medium.com/frank-r-castillo">Medium</a>]</h3>
 							<div id="MediumRss"></div>
-							<h3>Tweets</h3>
+							<h3>Tweets [<a href="https://twitter.com/FrankRCastillo">@FrankRCastillo</a>]</h3>
 							<div id="TwitterRss"></div>
 						</div>
 						<div id="academics">
