--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<head>
 		<meta	charset="utf-8"
 				name="viewport"
-				content="width=device-width,
-				initial-scale=1.0"/>
+				content="width=device-width"/>
 		<title>
 			Frank R Castillo
 		</title>
