--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						</div>
 						<div id="blog">
 							<h3>Blog [<a href="https://medium.com/frank-r-castillo">Medium</a>, <a href="#aboutme">Top</a>]</h3>
-							<div id="MediumRss">
+							<div id="MediumRss"></div>
 							<h3>Tweets [<a href="https://twitter.com/FrankRCastillo">@FrankRCastillo</a>, <a href="#aboutme">Top</a>]</h3>
 							<div id="TwitterRss"></div>
 						</div>
