--- a/index.html
+++ b/index.html
@@ -39,20 +39,23 @@
 				<td>
 					<div id="cntPane">
 						<div id="aboutme">
-							<h3>Frank R. Castillo [<a href="https://www.linkedin.com/in/franklinrcastillo/">LinkedIn</a>, <a href="#aboutme">Top</a>]</h3>
+							<h1>Frank R. Castillo</h1>
+							 [<a href="https://www.linkedin.com/in/franklinrcastillo/">LinkedIn</a>, <a href="#aboutme">Top</a>]
 							<img src="files/picture.jpg" id="profile"/>
 							<p>
 								<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>I am a dad, student, US Marine, and programming enthusiast who follows and, when time allows, writes about politics, international relations, technology, economics, finance, and other topics of global relevance. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I hold an MBA from University of South Florida Saint Petersburg, as well as a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology. I also served in the United States Marine Corps for nine years, concluding my service in 2013.
 							</p>
 						</div>
 						<div id="blog">
-							<h3>Blog [<a href="https://medium.com/frank-r-castillo">Medium</a>, <a href="#aboutme">Top</a>]</h3>
+							<b>Blog <b>
+							[<a href="https://medium.com/frank-r-castillo">Medium</a>, <a href="#aboutme">Top</a>]
 							<div id="MediumRss"></div>
-							<h3>Tweets [<a href="https://twitter.com/FrankRCastillo">@FrankRCastillo</a>, <a href="#aboutme">Top</a>]</h3>
+							<b>Tweets </b>
+							[<a href="https://twitter.com/FrankRCastillo">@FrankRCastillo</a>, <a href="#aboutme">Top</a>]
 							<div id="TwitterRss"></div>
 						</div>
 						<div id="academics">
-							<h3>Academics</h3>
+							<b>Academics</b><br/>
 								<h4>Presentations: Big Data and E-Commerce, University of South Florida (02/2017 - 05/2017)</h4>
 								<p>
 									<iframe class="vidframes"
