--- a/index.html
+++ b/index.html
@@ -16,58 +16,62 @@
 		<script type="text/javascript" src="files/rssFeed.js"></script>
 	</head>
 	<body>
+		<div id="top"></div>
 		<table>
-			<tr>
+			<td rowspan="3"></td>
+			<td id="pageBody" colspan="7">
+				<h1>Frank R. Castillo</h1>
+				<img src="files/picture.jpg" id="profile"/>
+				<p>
+					<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>I am a dad, student, US Marine, and programming enthusiast who follows and, when time allows, writes about politics, international relations, technology, economics, finance, and other topics of global relevance. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I hold an MBA from University of South Florida Saint Petersburg, as well as a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology. I also served in the United States Marine Corps for nine years, concluding my service in 2013.
+				</p>
+			</td>
+			<td rowspan="3"></td>
+			</tr>
+			<tr id="pageBody">
 				<td id="selPane">
-					<a href="#aboutme">
-					<img src="files/home.png" class="icon"/>
-					<a href="#blog">
-					<img src="files/rss.png" class="icon"/>
-					<a href="#academics">
-					<img src="files/academics.png" class="icon"/>
-					<a href="https://medium.com/frank-r-castillo" target="_blank">
-					<img src="files/medium.png" class="icon"/></a>
-					<a href="https://twitter.com/FrankRCastillo" target="_blank">
-					<img src="files/twitter.png" class="icon"/></a>
-					<a href="https://twitter.com/FrankRCastillo" target="_blank">
-					<img src="files/github.png" class="icon"/></a>
-					<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
-					<img src="files/linkedin.png" class="icon"/></a>
-					<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
-					<img src="files/youtube.png" class="icon"/></a>
+					<a href="#blog"><img src="files/rss.png" class="icon"/></a>
 				</td>
-				<td>
-					<div id="cntPane">
-						<div id="aboutme">
-							<h1>Frank R. Castillo</h1>
-							 [<a href="https://www.linkedin.com/in/franklinrcastillo/">LinkedIn</a>, <a href="#aboutme">Top</a>]
-							<img src="files/picture.jpg" id="profile"/>
-							<p>
-								<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>I am a dad, student, US Marine, and programming enthusiast who follows and, when time allows, writes about politics, international relations, technology, economics, finance, and other topics of global relevance. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I hold an MBA from University of South Florida Saint Petersburg, as well as a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology. I also served in the United States Marine Corps for nine years, concluding my service in 2013.
-							</p>
-						</div>
-						<div id="blog">
-							<b>Blog <b>
-							[<a href="https://medium.com/frank-r-castillo">Medium</a>, <a href="#aboutme">Top</a>]
-							<div id="MediumRss"></div>
-							<b>Tweets </b>
-							[<a href="https://twitter.com/FrankRCastillo">@FrankRCastillo</a>, <a href="#aboutme">Top</a>]
-							<div id="TwitterRss"></div>
-						</div>
-						<div id="academics">
-							<b>Academics</b><br/>
-								<h4>Presentations: Big Data and E-Commerce, University of South Florida (02/2017 - 05/2017)</h4>
-								<p>
-									<iframe class="vidframes"
-											src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRlSEfHmjxpgpqqoq3IGi2mB"
-											frameborder="0"
-											allowfullscreen>
-									</iframe>
-								</p>
-						</div>
+				<td id="selPane">
+					<a href="#academics"><img src="files/academics.png" class="icon"/></a>
+				</td>
+				<td id="selPane">
+					<a href="https://medium.com/frank-r-castillo" target="_blank"><img src="files/medium.png" class="icon"/></a>
+				</td>
+				<td id="selPane">
+					<a href="https://twitter.com/FrankRCastillo" target="_blank"><img src="files/twitter.png" class="icon"/></a>
+				</td>
+				<td id="selPane">
+					<a href="https://github.com/FrankRCastillo" target="_blank"><img src="files/github.png" class="icon"/></a>
+				</td>
+				<td id="selPane">
+					<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank"><img src="files/linkedin.png"	class="icon"/></a>
+				</td>
+				<td id="selPane">
+					<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank"><img src="files/youtube.png"	class="icon"/></a>
+				</td>
+			</tr>
+			<tr>
+				<td id="pageBody" colspan="7">
+					<div id="blog">
+						<h3>Blog <a href="#top">[top]</a></h3>
+						<div id="MediumRss"></div>
+						<h3>Tweets  <a href="#top">[top]</a></h3>
+						<div id="TwitterRss"></div>
+					</div>
+					<div id="academics">
+						<h3>Academics  <a href="#top">[top]</a></h3>
+						<h4>Presentations: Big Data and E-Commerce, University of South Florida (02/2017 - 05/2017)</h4>
+						<p>
+							<iframe class="vidframes"
+									src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRlSEfHmjxpgpqqoq3IGi2mB"
+									frameborder="0"
+									allowfullscreen>
+							</iframe>
+						</p>
 					</div>
 				</td>
-			<tr>
+			</tr>
 		</table>
 	</body>
 </html>
