--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		</title>
 		<link href="files/stylesheet.css" rel="stylesheet" type="text/css"/>
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans"/>
-
 		<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 		<script type="text/javascript" src="files/FeedEk.js"></script>
+		<script type="text/javascript" src="files/FeedYt.js"></script>
 		<script type="text/javascript" src="files/rssFeed.js"></script>
 	</head>
 	<body>
@@ -54,22 +54,13 @@
 			</tr>
 			<tr>
 				<td id="pageBody" colspan="7">
-					<div id="blog">
-						<h3>Blog <a href="#top">[top]</a></h3>
+					<div id="feed">
+						<h3>Medium <a href="#top">[top]</a></h3>
 						<div id="MediumRss"></div>
 						<h3>Tweets  <a href="#top">[top]</a></h3>
 						<div id="TwitterRss"></div>
-					</div>
-					<div id="academics">
-						<h3>Academics  <a href="#top">[top]</a></h3>
-						<h4>Presentations: Big Data and E-Commerce, University of South Florida (02/2017 - 05/2017)</h4>
-						<p>
-							<iframe class="vidframes"
-									src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRlSEfHmjxpgpqqoq3IGi2mB"
-									frameborder="0"
-									allowfullscreen>
-							</iframe>
-						</p>
+						<h3>YouTube <a href="#top">[top]</a></h3>
+						<div id="YouTubeRss"></div>
 					</div>
 				</td>
 			</tr>
