--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link href="files/stylesheet.css" rel="stylesheet" type="text/css"/>
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans"/>
 		<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-		<script type="text/javascript" src="FeedEk/js/FeedEk.js"></script>
+		<script type="text/javascript" src="files/FeedEk.js"></script>
 		<script type="text/javascript" src="files/FeedYt.js"></script>
 		<script type="text/javascript" src="files/rssFeed.js"></script>
 	</head>
