--- a/index.html
+++ b/index.html
@@ -31,19 +31,74 @@
 			</tr>
 			<tr id="pageBody">
 				<td id="selPane">
-					<a href="https://medium.com/frank-r-castillo" target="_blank"><img src="files/medium.png" class="icon"/></a>
+					<a href="https://medium.com/frank-r-castillo" target="_blank">
+						<table>
+							<tr>
+								<td id="iconTd">
+									<img src="files/medium.png" class="icon"/>
+								</td>
+								<td id="textTd">
+									Medium
+								</td>
+							</tr>
+						</table>
+					</a>
 				</td>
 				<td id="selPane">
-					<a href="https://twitter.com/FrankRCastillo" target="_blank"><img src="files/twitter.png" class="icon"/></a>
+					<a href="https://twitter.com/FrankRCastillo" target="_blank">
+						<table>
+							<tr>
+								<td id="iconTd">
+									<img src="files/twitter.png" class="icon"/>
+								</td>
+								<td id="textTd">
+									Twitter
+								</td>
+							</tr>
+						</table>
+					</a>
 				</td>
 				<td id="selPane">
-					<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank"><img src="files/youtube.png"	class="icon"/></a>
+					<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
+						<table>
+							<tr>
+								<td id="iconTd">
+									<img src="files/youtube.png" class="icon"/>
+								</td>
+								<td id="textTd">
+									YouTube
+								</td>
+							</tr>
+						</table>
+					</a>
 				</td>
 				<td id="selPane">
-					<a href="https://github.com/FrankRCastillo" target="_blank"><img src="files/github.png" class="icon"/></a>
+					<a href="https://github.com/FrankRCastillo" target="_blank">
+						<table>
+							<tr>
+								<td id="iconTd">
+									<img src="files/github.png" class="icon"/>
+								</td>
+								<td id="textTd">
+									GitHub
+								</td>
+							</tr>
+						</table>
+					</a>
 				</td>
 				<td id="selPane">
-					<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank"><img src="files/linkedin.png"	class="icon"/></a>
+					<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
+						<table>
+							<tr>
+								<td id="iconTd">
+									<img src="files/linkedin.png" class="icon"/>
+								</td>
+								<td id="textTd">
+									LinkedIn
+								</td>
+							</tr>
+						</table>
+					</a>
 				</td>
 			</tr>
 			<tr>
