--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				});
 				$('#TwitterRss').FeedEk({
 					FeedUrl: 'https://twitrss.me/twitter_user_to_rss/?user=FrankRCastillo',
-					MaxCount: 10
+					MaxCount: 10,
+					CharLimit: 100
 				});
 				$('#YouTubeRss').FeedEk({
 					FeedUrl: 'https://www.youtube.com/feeds/videos.xml?channel_id=UC2h-iPOAKbCe1eo8aA-Zf4g',
