--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				$('#MediumRss').FeedEk({
 					FeedUrl: 'https://medium.com/feed/frank-r-castillo',
 					MaxCount: 500, 
-					DateFormat: dteOpt
+					DateFormat: dteOpt,
+					Sort: true					
 				});
 				$('#TwitterRss').FeedEk({
 					FeedUrl: 'https://twitrss.me/twitter_user_to_rss/?user=FrankRCastillo',
