--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <td id="pageBody" colspan="5">
                 <h1>Frank R. Castillo</h1>
                 <img src="files/picture.jpg" id="profile"/>
-                <p>I am a family man, student, and former United States Marine. I currently attend the University of South Florida and hope to apply to the university’s PhD in economics by the end of 2017. When time allows, I also write about politics, economics, international relations, and technology. I seek constant intellectual challenge and growth, and I live my life by the mantra that <i>I am willing to have my ideas and preconceptions demolished so long as you bring a proper wrecking ball.</i><br/><br/>Professionally, I’ve had the opportunity to work in fascinating areas, including Anti-Money Laundering (AML), financial compliance, and information technology. During a stint as an AML analyst for a major financial institution, I saw the need for technology to help mitigate the risks financial crime, which inspired my current academic interests. My hope is to someday bring together the use of big data and economics disciplines to develop systems that help prevent fraud and money laundering.<br/><br/>My adult life can be said to have begun on June 28th, 2004, when I stepped on the yellow footprints of Marine Corps Recruit Depot Parris Island, South Carolina. A year before, I got a phone call. In the most intense, charismatic, and enthusiastic tone imaginable, Sergeant Davis demanded to know if I was interested in discussing my future. Being 17 and not knowing much of anything, I said, “Sure, why not?” Nine years later, I went to Iraq, floated around the Pacific and Indian oceans aboard a Marine Expeditionary Unit, and earned the rank of Staff Sergeant. Most importantly, I saw enough of the world to convince me that I had to become its eternal student.</p>
+                <p>I am a family man, former United States Marine, and masters student of economics at the University of South Florida. When time allows, I also write about politics, economics, international relations, and technology. My number one rule: <i>I am willing to have my ideas and preconceptions demolished so long as you bring a proper wrecking ball.</i><br/><br/>Professionally, I’ve had the opportunity to work in fascinating fields, including Anti-Money Laundering (AML), financial compliance, and information technology. During a stint as an AML analyst for a major financial institution, I saw the need for technology to help mitigate the risks of financial crime, which inspired my current academic interests. My hope is to someday bring together the use of big data and economics disciplines to develop systems that help prevent fraud and money laundering.<br/></p>
             </td>
             <td rowspan="3"></td>
             </tr>
@@ -122,10 +122,10 @@
             <tr>
                 <td id="pageBody" colspan="7">
                     <div id="feed">
-                        <h3>Medium [<a href="#top">top</a>]</h3>
-                        <div id="MediumRss"></div>
                         <h3>Tweets [<a href="#top">top</a>]</h3>
                         <div id="TwitterRss"></div>
+                        <h3>Medium [<a href="#top">top</a>]</h3>
+                        <div id="MediumRss"></div>
                         <h3>YouTube [<a href="#top">top</a>]</h3>
                         <div id="YouTubeRss"></div>
                     </div>
