--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
             <td rowspan="3"></td>
             <td id="pageBody" colspan="5">
                 <h1>Frank R. Castillo</h1>
-                <img src="files/picture.jpg" id="profile"/>
-                <p>I am a family man, former United States Marine, and masters student of economics at the University of South Florida. When time allows, I also write about politics, economics, international relations, and technology. My number one rule: <i>I am willing to have my ideas and preconceptions demolished so long as you bring a proper wrecking ball.</i><br/><br/>Professionally, I’ve had the opportunity to work in fascinating fields, including Anti-Money Laundering (AML), financial compliance, and information technology. During a stint as an AML analyst for a major financial institution, I saw the need for technology to help mitigate the risks of financial crime, which inspired my current academic interests. My hope is to someday bring together the use of big data and economics disciplines to develop systems that help prevent fraud and money laundering.<br/></p>
+		<img src="files/picture.jpg" id="profile"/>
+		<p>I am a family man, former United States Marine, and masters student of economics at the University of South Florida. When time allows, I also write about politics, economics, international relations, and technology. Professionally, I’ve had the opportunity to work in fascinating fields, including Anti-Money Laundering (AML), financial compliance, and information technology. During a stint as an AML analyst for a major financial institution, I saw the need for technology to help mitigate the risks of financial crime, which inspired my current academic interests. My hope is to someday bring together the use of big data and economics disciplines to develop systems that help prevent fraud and money laundering. My number one rule is, <i>I am willing to have my ideas and preconceptions demolished so long as you bring a proper wrecking ball.</i>
+		</p>
             </td>
             <td rowspan="3"></td>
             </tr>
