--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     Sort: true                    
                 });
                 $('#TwitterRss').FeedEk({
-                    FeedUrl: 'https://twitrss.me/twitter_user_to_rss/?user=FrankRCastillo',
+                    FeedUrl: 'https://twitrss.me/twitter_user_to_rss/?user=frankrcastillo',
                     MaxCount: 10,
                     CharLimit: 100,
                     DateFormat: dteOpt
